--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     overflow: scroll;
-    margin: auto;
+    justify-content: center;
     height: 100vh;
 }
 
@@ -37,7 +37,7 @@ h2{
 }
 
 .card{
-       width: 33%;
+       width: 25%;
         margin: 20px;
 }
 
